--- a/tutorial4.ipynb
+++ b/tutorial4.ipynb
@@ -48,6 +48,96 @@
     "plt.xticks([]), plt.yticks([]) # to hide tick values on X and Y axis\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "drawing = False # true if mouse is pressed\n",
+    "mode = True # if True, draw rectangle. Press 'm' to toggle to curve\n",
+    "ix,iy = -1,-1\n",
+    "# mouse callback function\n",
+    "def draw_circle(event,x,y,flags,param):\n",
+    "    global ix,iy,drawing,mode\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        drawing = True\n",
+    "        ix,iy = x,y\n",
+    "    elif event == cv2.EVENT_MOUSEMOVE:\n",
+    "        if drawing == True:\n",
+    "            if mode == True:\n",
+    "                cv2.rectangle(img,(ix,iy),(x,y),(0,255,0),-1)\n",
+    "            else:\n",
+    "                cv2.circle(img,(x,y),5,(0,0,255),-1)\n",
+    "    elif event == cv2.EVENT_LBUTTONUP:\n",
+    "        drawing = False\n",
+    "        if mode == True:\n",
+    "            cv2.rectangle(img,(ix,iy),(x,y),(0,255,0),-1)\n",
+    "        else:\n",
+    "            cv2.circle(img,(x,y),5,(0,0,255),-1)\n",
+    "\n",
+    "img = np.zeros((512,512,3), np.uint8)\n",
+    "cv2.namedWindow('image')\n",
+    "cv2.setMouseCallback('image',draw_circle)\n",
+    "while(1):\n",
+    "    cv2.imshow('image',img)\n",
+    "    k = cv2.waitKey(1) & 0xFF\n",
+    "    if k == ord('m'):\n",
+    "        mode = not mode\n",
+    "    elif k == 27:\n",
+    "        break\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "# Create a black image\n",
+    "img = np.zeros((512, 512, 3), np.uint8)\n",
+    "\n",
+    "# Mouse callback function\n",
+    "def draw_random_circle(event, x, y, flags, param):\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        # Generate a random radius between 10 and 100\n",
+    "        radius = random.randint(10, 100)\n",
+    "        # Generate random BGR color\n",
+    "        color = (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
+    "        cv2.circle(img, (x, y), radius, color, -1)\n",
+    "\n",
+    "# Create a window and bind the function to the window\n",
+    "cv2.namedWindow('image')\n",
+    "cv2.setMouseCallback('image', draw_random_circle)\n",
+    "\n",
+    "while True:\n",
+    "    cv2.imshow('image', img)\n",
+    "    if cv2.waitKey(20) & 0xFF == 27:  # Press 'Esc' key to exit\n",
+    "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_circle(event,x,y,flags,param):\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        cv.circle(img,(x,y),30,(random.randrange(0,255),random.randrange(0,255),random.randrange(0,255)),3)\n",
+    "        font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "        cv2.putText(img,'mouse-('+str(x)+','+str(y)+')',(10,40), font, 1,(255,255,255),2,cv2.LINE_AA)"
+   ]
   }
  ],
  "metadata": {
