--- a/chap1.4.ipynb
+++ b/chap1.4.ipynb
@@ -223,6 +223,86 @@
     "    plt.xticks([]),plt.yticks([])\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "img = cv2.imread('Lenna.png',0)\n",
+    "edges100 = cv2.Canny(img,100,100)\n",
+    "edges200 = cv2.Canny(img,200,200)\n",
+    "edges = cv2.Canny(img,100,200)\n",
+    "\n",
+    "im = cv2.imread('Lenna.png')\n",
+    "imgray = cv2.cvtColor(im,cv2.COLOR_BGR2GRAY)\n",
+    "imgray = cv2.GaussianBlur(imgray,(5,5),0)\n",
+    "\n",
+    "ret, thresh = cv2.threshold(imgray,100,255,0)\n",
+    "#thresh = cv2.adaptiveThreshold(imgray,255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, #cv2.THRESH_BINARY, 11, 2)\n",
+    "\n",
+    "\n",
+    "kernel = np.ones((5,5),np.uint8)\n",
+    "#erosion = cv2.erode(img,kernel,iterations = 1)\n",
+    "#dilation = cv2.dilate(img,kernel,iterations = 1)\n",
+    "#opening = cv2.morphologyEx(img, cv2.MORPH_OPEN, kernel)\n",
+    "#closing = cv2.morphologyEx(img, cv2.MORPH_CLOSE, kernel)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(24,8))\n",
+    "plt.subplot(1,3,1),plt.imshow(edges100,cmap = 'gray')\n",
+    "plt.title('Original'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(1,3,2),plt.imshow(edges200,cmap = 'gray')\n",
+    "plt.title('Laplacian'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(1,3,3),plt.imshow(edges,cmap = 'gray')\n",
+    "plt.title('Sobel X'), plt.xticks([]), plt.yticks([])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "img = cv2.imread('Djed.jpg',0)\n",
+    "edges100 = cv2.Canny(img,100,100)\n",
+    "edges200 = cv2.Canny(img,200,200)\n",
+    "edges = cv2.Canny(img,100,200)\n",
+    "\n",
+    "im = cv2.imread('Djed.jpg')\n",
+    "imgray = cv2.cvtColor(im,cv2.COLOR_BGR2GRAY)\n",
+    "imgray = cv2.GaussianBlur(imgray,(5,5),0)\n",
+    "\n",
+    "ret, thresh = cv2.threshold(imgray,100,255,0)\n",
+    "thresh = cv2.adaptiveThreshold(imgray,255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, cv2.THRESH_BINARY, 11, 2)\n",
+    "\n",
+    "\n",
+    "kernel = np.ones((5,5),np.uint8)\n",
+    "erosion = cv2.erode(img,kernel,iterations = 1)\n",
+    "dilation = cv2.dilate(img,kernel,iterations = 1)\n",
+    "opening = cv2.morphologyEx(img, cv2.MORPH_OPEN, kernel)\n",
+    "closing = cv2.morphologyEx(img, cv2.MORPH_CLOSE, kernel)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(24,8))\n",
+    "plt.subplot(1,3,1),plt.imshow(erosion,cmap = 'gray')\n",
+    "plt.title('Original'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(1,3,2),plt.imshow(dilation,cmap = 'gray')\n",
+    "plt.title('Laplacian'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(1,3,3),plt.imshow(thresh,cmap = 'gray')\n",
+    "plt.title('Sobel X'), plt.xticks([]), plt.yticks([])\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
